[package]
name = "embedded_types"
description = "Types useful in embedded, no_std amd hw development"
version = "0.1.3"

authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
repository = "https://github.com/kjetilkjeka/embedded-types.rs"
license = "MIT OR Apache-2.0"

categories = ["embedded", "no-std", "hardware-support"]
keywords = ["io", "arm", "hw", "types"]

[dependencies]
